# cosmostat

./: TODO.md
notebooks/: 1mois_1labo_sbi.ipynb
pycs/sparsity/sparse2d/: starlet.py
src/cxx/: CMakeLists.txt
